allow java 17 in tests
Signed-off-by: Gregor Zeitlinger <gregor.zeitlinger@grafana.com>